--- a/coursework_2/coursework_2.ipynb
+++ b/coursework_2/coursework_2.ipynb
@@ -16,18 +16,30 @@
     "\n",
     "Alternatively, you can use pip, pip3 or anaconda etc to install Python packages.\n",
     "\n",
-    "**Note 1:** please read the both the text and code comment in this notebook to get an idea what you are supposed to implement.\n",
+    "**Note:** please read the both the text and code comment in this notebook to get an idea what you are supposed to implement.\n",
     "\n",
-    "**Note 2:** If you are using the virtual environment in the Computing Lab, please run the following command in the command line before opening jupyter-notebook and importing tensorflow. This will tell tensorflow where the Nvidia CUDA libariries are.\n",
+    "**Note 2** If you are using the virtual environment please run the following command before importing tensorflow\n",
     "\n",
     "`export LD_LIBRARY_PATH=/vol/cuda/9.0.176/lib64/:\"${LD_LIBRARY_PATH}}\"` "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-cbc244e07db8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'matplotlib'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries\n",
     "import numpy as np \n",
@@ -82,7 +94,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from reader import get_images\n",
+    "\n",
+    "(x_train, y_train), (x_test, y_test) = get_images()\n",
+    "\n",
+    "print(\"The dimension of traning set x is: \" + str(len(x_train)))\n",
+    "print(\"The dimension of testing set x is: \" + str(len(x_test)))\n",
+    "print(\"The dimension of traning set y is: \" + str(len(y_train)))\n",
+    "print(\"The dimension of testing set y is: \" + str(len(y_test)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -97,7 +118,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def getImage(label, labels, images):\n",
+    "    for i in range(0, len(labels)):\n",
+    "        if labels[i] == label:\n",
+    "            img_arr = images[i]\n",
+    "            img = [img_arr[i:i+28] for i in range(0, len(img_arr), 28)]\n",
+    "            return img\n",
+    "    return None\n",
+    "\n",
+    "# print 3 training images\n",
+    "for i in range(0, 4):\n",
+    "    img = getImage(i, y_train, x_train)\n",
+    "    plt.subplot(2, 3, i+1)\n",
+    "    plt.imshow(img)\n",
+    "\n",
+    "# print 3 test images\n",
+    "for i in range(4, 7):\n",
+    "    img = getImage(i, y_train, x_train)\n",
+    "    plt.subplot(2, 3, i)\n",
+    "    plt.imshow(img)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,7 +153,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def getClassCount(c):\n",
+    "    count = 0\n",
+    "    for n in y_train:\n",
+    "        if int(c) == int(n):\n",
+    "            count += 1\n",
+    "            \n",
+    "    return count\n",
+    "\n",
+    "for i in range(0, 10):\n",
+    "    print(\"For class \" + str(i) + \" the count is: \" + str(getClassCount(i)))\n",
+    "\n",
+    "# TODO: why?"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,7 +199,6 @@
    "outputs": [],
    "source": [
     "# Convert the label class into a one-hot representation\n",
-    "num_classes = ...\n",
     "y_train = keras.utils.to_categorical(y_train, num_classes)\n",
     "y_test = keras.utils.to_categorical(y_test, num_classes)"
    ]
@@ -154,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Build a multi-layer perceptron, also known as multi-layer fully connected network. You need to define the layers, the loss function, the optimiser and evaluation metric. (30 points)"
+    "### 2.1 Build a multi-layer perceptron, also known as multi-layer fully connected network. You need to define the number of classes, the layers, the loss function, the optimiser and evaluation metric. (30 points)"
    ]
   },
   {
@@ -163,6 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "num_classes = ...\n",
     "model = keras.models.Sequential()\n",
     "model.add(...)\n",
     "...\n",
@@ -216,7 +270,7 @@
     "    \"\"\"\n",
     "        This function prints and plots the confusion matrix.\n",
     "        \n",
-    "        cm: confusion matrix, default to be np.int32 data type\n",
+    "        cm: confusion matrix\n",
     "        classes: a list of the class labels or class names\n",
     "        normalize: normalize the matrix so that each row amounts to one\n",
     "        cmap: color map\n",
@@ -358,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
